--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
+  "homepage": "http://batabalazs96.github.io/maini",
   "name": "maini",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@reduxjs/toolkit": "^1.7.0",
     "@svgr/webpack": "^6.1.2",
@@ -56,6 +61,7 @@
     "react-persist": "^1.0.2",
     "react-redux": "^7.2.6",
     "react-refresh": "^0.11.0",
+    "react-router-dom": "^6.2.1",
     "redux-persist-transform-encrypt": "^3.0.1",
     "redux-saga": "^1.1.3",
     "resolve": "^1.20.0",
@@ -63,6 +69,7 @@
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
+    "swiper": "^8.0.6",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "~4.1.5",
@@ -72,10 +79,13 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "sass-loader": "^12.4.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
